fix highligt on mobile

--- a/src/components/Suggestion/Suggestion.css
+++ b/src/components/Suggestion/Suggestion.css
@@ -1,5 +1,7 @@
 .tags-suggestion {
   cursor: pointer;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  -webkit-tap-highlight-color: transparent;
   position: absolute;
   overflow: hidden;
   box-sizing: border-box;
