--- a/src/components/Tag/Tag.css
+++ b/src/components/Tag/Tag.css
@@ -15,6 +15,8 @@
   margin-left: 3px;
   font-weight: 900;
   opacity: 0.5;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  -webkit-tap-highlight-color: transparent;
   cursor: pointer;
 }
 .tag .tag-close:hover {
